--- a/index.html
+++ b/index.html
@@ -4,10 +4,58 @@
 		<meta charset="utf-8">
 		<title>Orlando City</title>
 		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
-
+		<link rel="stylesheet" href="css/Orlando.css">
+		
 	</head>
 	<body>
+		<header>
+			<div class="header-black">
+					<div class="container">
+							<ul class="float-md-right">
+								<li class="clube-01"><a href="#"></a></li>
+								<li class="clube-02"><a href="#"></a></li>
+								<li class="clube-03"><a href="#"></a></li>
+								<li class="clube-04"><a href="#"></a></li>
+								<li class="clube-05"><a href="#"></a></li>
+								<li class="clube-06"><a href="#"></a></li>
+								<li class="clube-07"><a href="#"></a></li>
+								<li class="clube-08"><a href="#"></a></li>
+								<li class="clube-09"><a href="#"></a></li>
+								<li class="clube-10"><a href="#"></a></li>
+								<li class="clube-11"><a href="#"></a></li>
+								<li class="clube-12"><a href="#"></a></li>
+								<li class="clube-13"><a href="#"></a></li>
+								<li class="clube-14"><a href="#"></a></li>
+								<li class="clube-15"><a href="#"></a></li>
+								<li class="clube-16"><a href="#"></a></li>
+								<li class="clube-17"><a href="#"></a></li>
+								<li class="clube-18"><a href="#"></a></li>
+								<li class="clube-19"><a href="#"></a></li>
+								<li class="clube-20"><a href="#"></a></li>
+								<li class="clube-21"><a href="#"></a></li>
+								<li class="clube-22"><a href="#"></a></li>
+							</ul>
+						</div>
+			</div>
 
+
+			<div class="container">
+					<div class="row">
+						
+					</div>
+				</div>
+				<div class="container">
+					<img id="Logotipo" src="img/orlando-logo.png" alt="Logotipo">
+				</div>
+		</header>
+		
+		
+		
+		<script
+			src="https://code.jquery.com/jquery-3.3.1.min.js"
+			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			crossorigin="anonymous">
+		</script>
 		
 
 		<script src="lib/jquery/jquery.min.js"></script>
