--- a/index.html
+++ b/index.html
@@ -37,16 +37,34 @@
 							</ul>
 						</div>
 			</div>
+			<div class="container">
+					<img id="Logotipo" src="img/orlando-logo.png" alt="Logotipo">
 
+			</div>
 
 			<div class="container">
-					<div class="row">
-						
+					<div class="float-right" 	>
+						<nav id="menu" class="float-right"  >
+							<ul>
+								<li><a href="">tickets</a></li>
+								<li><a href="">news</a></li>
+								<li><a href="">schedule</a></li>	
+								<li class="search">
+										<div class="input-group">
+										  <input type="search" placeholder="search">
+										  <span class="input-group-btn">
+											<button class="" type="button"></button>
+										  </span>
+										</div><!-- /input-group -->
+									</li>		
+		
+
+							</ul>
+
+						</nav>
 					</div>
 				</div>
-				<div class="container">
-					<img id="Logotipo" src="img/orlando-logo.png" alt="Logotipo">
-				</div>
+				
 		</header>
 		
 		
