--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>Orlando City</title>
 		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/Orlando.css">
-		
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+
 	</head>
 	<body>
 		<header>
@@ -53,7 +55,7 @@
 										<div class="input-group">
 										  <input type="search" placeholder="search">
 										  <span class="input-group-btn">
-											<button class="" type="button"></button>
+											<button class="" type="button"><i class="fa fa-search"></i></button>
 										  </span>
 										</div><!-- /input-group -->
 									</li>		
@@ -66,7 +68,12 @@
 				</div>
 				
 		</header>
-		
+		<section id="banner">
+			<h1>Orlando City
+				<small>Orlando Soccer Club</small>
+			</h1>
+			
+		</section>
 		
 		
 		<script
