--- a/index.html
+++ b/index.html
@@ -72,9 +72,45 @@
 			<h1>Orlando City
 				<small>Orlando Soccer Club</small>
 			</h1>
-			
+
+
+		<div id="news" class="container">
+
+				<div class="row text-center">
+					<h2>LATEST NEWS</h2>
+				</br>
+					<hr>
+				</div>
+				<div class="row tumbmails" >
+					<div class="col-md-3">
+						<img src="img/noticia-thumb.jpg">
+						<h3>Orlando City Acquires Goalkeeper Joe Bendik from Toronto FC</h3>
+						<time>December 21, 2015</time>
+
+					</div>
+					<div class="col-md-3">
+						<img src="img/noticia-thumb.jpg">
+						<h3>Orlando City Acquires Goalkeeper Joe Bendik from Toronto FC</h3>
+						<time>December 21, 2015</time>
+
+					</div>
+					<div class="col-md-3">
+						<img src="img/noticia-thumb.jpg">
+						<h3>Orlando City Acquires Goalkeeper Joe Bendik from Toronto FC</h3>
+						<time>December 21, 2015</time>
+
+
+					</div>
+					<div class="col-md-3">
+						<img src="img/noticia-thumb.jpg">
+						<h3>Orlando City Acquires Goalkeeper Joe Bendik from Toronto FC</h3>
+						<time>December 21, 2015</time>
+
+
+					</div>
+				</div>
+			</div>
 		</section>
-		
 		
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.min.js"
