--- a/index.html
+++ b/index.html
@@ -130,6 +130,29 @@
 			</div>
 			</div>
 		</div>
+		<div class="container">
+			<div id="call-to-action">
+				<div class="rows">
+						<h2>AMERICAN CLUB NUMBER ONE IN BRAZIL</h2>
+						<hr>	
+					</div>
+					
+					<div class="text-center">
+						<p>Em linguística, a noção de texto é ampla e ainda aberta a uma definição mais precisa. Grosso modo, pode ser entendido como manifestação linguística das ideias de um autor, que serão interpretadas pelo leitor de acordo com seus ... Wikipédia
+						</p> 
+				</div>
+				<div class="row text-center">
+					<div class="col-xs-6">
+						<a href="#" class="btn btn-roxo " #>shop</a>
+					</div>
+					<div class="col-xs-6">
+						<a href="#" class="btn btn-amarelo">register</a>
+					</div>	
+				
+				</div>
+		</div>
+
+	</div>
 
 	</section>
 
