--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Orlando City</title>
 		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/Orlando.css">
+		<link rel="stylesheet" href="css/orlando.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
 
@@ -130,6 +130,7 @@
 			</div>
 			</div>
 		</div>
+
 		<div class="container">
 			<div id="call-to-action">
 				<div class="rows">
@@ -155,8 +156,21 @@
 	</div>
 
 	</section>
+		<footer>
+			<div class="row row-cinza">
+				<div class="container"></div>
+			</div>
+			<div class="row row-cinza-escuro">
+				<div class="row container">
+					<p class="pull-left"> Copyringth @ Orlando City 2018. all rights reserved
+						</p>
+					<p class="text-roxo ">		 created by Jean
 
-	
+					</p>
+				</div>
+
+			</div>
+		</footer>	
 		
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.min.js"
