--- a/index.html
+++ b/index.html
@@ -158,7 +158,61 @@
 	</section>
 		<footer>
 			<div class="row row-cinza">
-				<div class="container"></div>
+				<div class="container">
+
+					<div class="row">
+						<div class="col-md-2 text-center">
+							<img class="Logotipo" src="img/orlando-logo.png" alt="Logotipo">
+
+						</div>
+						<div class="col-md-10 ">
+							<div class="row cols ">
+								<div class="col-md-4 col-popular-post">
+									<h4>Popular Post</h4>
+									<ul>
+										<li>
+											<h5>
+												neque porro quiserum est,quister
+											</h5>
+											</li>
+										<time>21 january 2016</time>
+
+
+									</ul>
+								</div>
+								<div class="col-md-4 col-popular-links">
+									<h4>
+										LINKS
+									</h4>
+									<ul>
+											<li>
+												<a href="#"><i class="fa fa-angle-rigth"></i> tickts</i></a>
+											</li>
+											<li>
+												<a href="#"><i class="fa fa-angle-rigth"></i> news</i></a>
+											</li>
+											<li>
+												<a href="#"><i class="fa fa-angle-rigth"></i> schudeles</i></a>
+											</li>
+												
+										</ul>
+
+								</div>
+								<div class="col-md-4 col-redes">
+									<h4>Get touch</h4>
+									<andress>
+									<i class="fa fa-map-marker"> Fernado de Souza - tx us</i>
+									</andress>
+									<p><a href="tel :3325-4558 "><i class="fa fa-phone"></i>  3325-4558</a></p>
+								</div>
+
+							</div>
+
+						</div>
+
+					</div>
+
+				</div>
 			</div>
 			<div class="row row-cinza-escuro">
 				<div class="row container">
